--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <body>
 	<script src="index.js"></script>
 
-
-
 <div id="sidebar">
   <div class = "centered">
     <h2>Search For Classes</h2>
@@ -25,6 +23,9 @@
 
 
 <div id="planview">
+  <div id = "header">
+    <img src="logo.png" alt="DegreeWiz" style="width:280px;height:90px;">
+  </div>
   <h2>Your Four-Year Plan</h2>
   <div id="plangrid">
 
