--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <img src="logo.png" alt="DegreeWiz" style="width:280px;height:90px;">
   </div>
   <h2>Your Four-Year Plan</h2>
-  <div id="plangrid">
-
+  <div id="plangrid"></div>
+  <div id = "endButtons">
+    <button onclick="savePlan()">Save Plan </button>
+    <button onclick="checkPrerequisites()">Check Prerequisites</button>
   </div>
 </div>
 
