--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <button onclick="savePlan()">Save Plan </button>
     <button onclick="checkPrerequisites()">Check Prerequisites</button>
   </div>
+  <div id = "courseInfo" onclick="clearCourseInfo()"></div>
 </div>
 
   </body>
